# SoapySDR

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog.txt  Config_8h.html  Config_8h_source.html  Config_8hpp.html  Config_8hpp_source.html  Constants_8h.html  Constants_8h_source.html  Device_8h.html  Device_8h_source.html  Device_8hpp.html  Device_8hpp_source.html  Logger_8h.html  Logger_8h_source.html  Logger_8hpp.html  Logger_8hpp_source.html  Modules_8h.html  Modules_8h_source.html  Modules_8hpp.html  Modules_8hpp_source.html  README.md  Registry_8hpp.html  Registry_8hpp_source.html  Types_8h.html  Types_8h_source.html  Types_8hpp.html  Types_8hpp_source.html  Version_8h.html  Version_8h_source.html  Version_8hpp.html  Version_8hpp_source.html  annotated.html  appveyor.yml  classSoapySDR_1_1Device-members.html  classSoapySDR_1_1Device.html  classSoapySDR_1_1Range-members.html  classSoapySDR_1_1Range.html  (+26 more)
ExampleDriver/: CMakeLists.txt  MyDeviceSupport.cpp  README.md
GrOsmoSDR/: CMakeLists.txt
GrOsmoSDR/compat/: GrOsmoSDRModReg.in.cpp
GrOsmoSDR/compat/include/: GrOsmoSDRInterface.hpp
GrOsmoSDR/compat/include/gnuradio/: attributes.h  sptr_magic.h  sync_block.h
GrOsmoSDR/gr-osmosdr/: README
GrOsmoSDR/gr-osmosdr/apps/: osmocom_fft
GrOsmoSDR/gr-osmosdr/cmake/Modules/: FindGnuradioFCDPP.cmake  FindGnuradioUHD.cmake  FindLibAIRSPY.cmake
GrOsmoSDR/gr-osmosdr/include/osmosdr/: api.h  device.h
GrOsmoSDR/gr-osmosdr/lib/: config.h.in  gnuradio-osmosdr.rc.in  sink_impl.h  source_impl.h
GrOsmoSDR/gr-osmosdr/lib/bladerf/: bladerf_common.h  bladerf_sink_c.h
GrOsmoSDR/gr-osmosdr/lib/fcd/: fcd_source_c.cc
GrOsmoSDR/gr-osmosdr/lib/file/: CMakeLists.txt
GrOsmoSDR/gr-osmosdr/lib/hackrf/: CMakeLists.txt
GrOsmoSDR/gr-osmosdr/lib/miri/: miri_source_c.cc
GrOsmoSDR/gr-osmosdr/swig/: CMakeLists.txt
GrOsmoSDR/include/: GrOsmoSDRInterface.hpp
GrOsmoSDR/include/gnuradio/: basic_block.h  gr_complex.h  io_signature.h  sync_block.h  types.h
OsmoSupport/gr-osmosdr/: AUTHORS  CMakeLists.txt  gnuradio-osmosdr.pc.in
OsmoSupport/gr-osmosdr/apps/: CMakeLists.txt  osmocom_siggen  osmocom_spectrum_sense
OsmoSupport/gr-osmosdr/docs/: CMakeLists.txt
OsmoSupport/gr-osmosdr/grc/: CMakeLists.txt  gen_osmosdr_blocks.py
OsmoSupport/gr-osmosdr/lib/: CMakeLists.txt  arg_helpers.h  device.cc  ranges.cc  sink_iface.h  sink_impl.cc  source_impl.cc
OsmoSupport/gr-osmosdr/python/: __init__.py
OsmoSupport/gr-osmosdr/swig/: osmosdr_swig.i
UHDSupport/: CMakeLists.txt  SoapyUHDDevice.cpp  TypeHelpers.hpp  UHDSoapyDevice.cpp  UHDSupport.cpp
apps/: CMakeLists.txt  SoapyRateTest.cpp  SoapySDRProbe.cpp  SoapySDRUtil.1  SoapySDRUtil.cpp  getopt.h  osmocom_siggen_base.py  osmocom_siggen_nogui
apps/msvc/: getopt.h
devel/: BufferSim.cpp  CMakeLists.txt  TestFormatConvert.cpp  TestFormatConvertClass.cpp  TestFormatConvertFunctions.cpp  convertPrimatives.hpp
docs/: CMakeLists.txt  Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
java/: CMakeLists.txt  Device.i  DeviceWrapper.hpp  JavaWrappers.hpp  SoapySDRJava.i  Stream.i
lib/: CMakeLists.txt  Convert.cpp  ConverterRegistry.cpp  ConvertersC.cpp  DefaultConverters.cpp  Device.cpp  DeviceC.cpp  ErrorHelpers.hpp  Errors.cpp  ErrorsC.cpp  Factory.cpp  FactoryC.cpp  Formats.cpp  FormatsC.cpp  Interface.cpp  Loader.in.cpp  Logger.cpp  LoggerC.cpp  Modules.in.cpp  ModulesC.cpp  NullDevice.cpp  Registry.cpp  SoapySDR.in.pc  Time.c  TimeC.cpp  TypeHelpers.hpp  Types.cpp  TypesC.cpp  Version.in.cpp  VersionC.cpp  source_iface.h
lib/airspy/: airspy_source_c.cc
lib/android/: README.md  glob.c  glob.h
lib/bladerf/: CMakeLists.txt  bladerf_common.cc
lib/file/: file_source_c.cc
lib/hackrf/: hackrf_sink_c.cc  hackrf_sink_c.h
lib/miri/: CMakeLists.txt  miri_source_c.h
lib/rtl_tcp/: rtl_tcp_source_f.cc
lib/uhd/: uhd_source_c.h
luajit/: CMakeLists.txt  Device.lua  Lib.lua  Logger.lua  Time.lua  Utility.lua  init.in.lua
luajit/apps/: README.md  RxSamplesToFile.lua  SimpleSiggen.lua
luajit/cmake/: FindLuaJIT.cmake
luajit/docs/: CMakeLists.txt  config.ld.in
luajit/tests/: CMakeLists.txt  TestConvertTypes.lua  TestDeviceAPI.lua  TestEnumerateDevices.lua  TestErrorCodes.lua  TestFormats.lua  TestLogger.lua  TestTimeConversion.lua
python/: CMakeLists.txt  SoapySDR.i  SoapySDR.in.i  get_python_lib.py
python/apps/: MeasureDelay.py  SimpleSiggen.py  soapy_log_handle.py
python/python3/: CMakeLists.txt
python3/: CMakeLists.txt  FindPython3Interp.cmake  FindPython3Libs.cmake  README.md
python3/apps/: MeasureDelay.py  soapy_log_handle.py
swig/: CMakeLists.txt  soapy_common.i
swig/csharp/: CMakeLists.txt  README.md  SWIGCSharp.cmake
swig/csharp/apps/: CMakeLists.txt  RxSamplesToFileExample.cs  SiggenExample.cs
swig/csharp/assembly/: AssemblyInfo.in.cs  BuildInfo.Assembly.in.cs  CMakeLists.txt  HashCodeBuilder.cs  Logger.cs  RxStream.cs  SoapyConvertible.cs  Stream.cs  TxStream.cs  Utility.cs
swig/csharp/docs/: CMakeLists.txt  Doxyfile.in
swig/csharp/swig/: CMakeLists.txt  Constants.hpp  Device.i  Docs.i  Logger.i  SoapySDR.i  Stream.hpp  Stream.i  Types.i  Utility.hpp  Versions.in.hpp  soapy_std_vector.i
swig/csharp/tests/: CMakeLists.txt  TestBuildInfo.cs  TestDeviceAPI.cs  TestEnumerateDevices.cs  TestLogger.cs  TestRunner.cs  TestSoapyTypes.cs  TestStreamingAPI.cs  TestTimeConversion.cs
swig/java/: CMakeLists.txt  JavaWrappers.hpp  Logger.i  SoapySDRJava.i  Stream.i
swig/java/maven/: .gitignore  pom.xml
swig/java/swig/: CMakeLists.txt  Constants.hpp  Device.i  Docs.i  Logger.i  SWIGJava.cmake  SoapySDR.i  SoapySDRJava.i  Stream.hpp  Stream.i  Types.i  Utility.hpp  Versions.in.hpp  java_init.i  soapy_std_vector.i  std_complex.i
swig/java/swig/native/: CMakeLists.txt  (+10 more)
swig/python/: CMakeLists.txt  SoapySDR.in.i  doctypes.i  get_python_lib.py
swig/python/python2/: CMakeLists.txt
swig/python3/: FindPython3Interp.cmake  FindPython3Libs.cmake
tests/: CMakeLists.txt  TestConvertTypes.cpp  TestFormatConvert.cpp  TestFormatParser.cpp  TestKwargsMarkup.cpp  TestTimeConversion.cpp
(+2312 files in other folders)
